[gd_scene load_steps=12 format=3 uid="uid://dsurnmyedsdo5"]

[ext_resource type="Script" path="res://Scenes/UI/Player/water_meter.gd" id="1_k0g2m"]
[ext_resource type="Shader" path="res://Scripts/Shaders/water_meter.gdshader" id="2_pfgyn"]
[ext_resource type="Texture2D" uid="uid://cwqmj66y1mys1" path="res://Art/UI/Water/roundedrect.png" id="3_64fra"]
[ext_resource type="Shader" path="res://Scripts/Shaders/loading_fluid.gdshader" id="4_u76uw"]
[ext_resource type="Texture2D" uid="uid://dsx87sp7tkhmk" path="res://Art/UI/Water/roundedddrect.png" id="5_ehu82"]
[ext_resource type="Texture2D" uid="uid://35sqdti6wyb4" path="res://Art/Particles/water-drop.svg" id="6_ilxua"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y7i78"]
shader = ExtResource("2_pfgyn")
shader_parameter/squeeze_amount = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p2xgg"]
shader = ExtResource("4_u76uw")
shader_parameter/aspect_ratio = 0.05
shader_parameter/progress = 1.0
shader_parameter/bg_color = Color(0.34902, 0.168627, 1, 0.133333)
shader_parameter/wave_1_color = Color(0, 0.164706, 1, 1)
shader_parameter/wave_2_color = Color(0.0431373, 0.627451, 0.956863, 1)
shader_parameter/wave_mix_color = Color(0.819608, 0.0313726, 0.360784, 1)

[sub_resource type="Gradient" id="Gradient_gj8et"]
offsets = PackedFloat32Array(0, 0.666667, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qm866"]
gradient = SubResource("Gradient_gj8et")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jnix8"]
lifetime_randomness = 0.01
emission_shape = 1
emission_sphere_radius = 21.36
particle_flag_disable_z = true
direction = Vector3(0.41, -1, 0)
spread = 18.41
flatness = 1.0
gravity = Vector3(0, 230.34, 0)
initial_velocity_min = 272.73
initial_velocity_max = 363.64
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
damping_min = 93.945
damping_max = 100.0
angle_min = -210.0
angle_max = -210.0
scale_min = 0.02
scale_max = 0.04
color = Color(0.265625, 0.785156, 0.910156, 1)
color_ramp = SubResource("GradientTexture1D_qm866")
hue_variation_min = -0.1
hue_variation_max = 0.1
turbulence_noise_strength = 15.15
turbulence_noise_scale = 7.41
turbulence_noise_speed = Vector3(1.835, 3.045, -0.87)

[node name="WaterMeter" type="CanvasLayer"]
process_mode = 1
script = ExtResource("1_k0g2m")

[node name="VisionController" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -530.0
offset_right = 57.0
grow_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="VisionController"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MeterContainer" type="VBoxContainer" parent="VisionController/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 500)
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Squeezer" type="TextureRect" parent="VisionController/MarginContainer/MeterContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_y7i78")
clip_contents = true
layout_mode = 2
texture = ExtResource("3_64fra")
expand_mode = 5
stretch_mode = 5

[node name="FillBar" type="TextureRect" parent="VisionController/MarginContainer/MeterContainer/Squeezer"]
unique_name_in_owner = true
show_behind_parent = true
material = SubResource("ShaderMaterial_p2xgg")
clip_contents = true
layout_mode = 2
offset_right = 25.0
offset_bottom = 500.721
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
texture = ExtResource("5_ehu82")
expand_mode = 5

[node name="WaterDrops" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
process_mode = 3
z_index = -5
z_as_relative = false
position = Vector2(34, 199)
amount = 5
process_material = SubResource("ParticleProcessMaterial_jnix8")
texture = ExtResource("6_ilxua")
lifetime = 0.5
explosiveness = 0.25
fixed_fps = 60
